--- a/deploy-with-bosh.html.md.erb
+++ b/deploy-with-bosh.html.md.erb
@@ -12,9 +12,8 @@ For example, you could:
 * Use MicroBOSH to deploy multi-VM BOSH.
 
 In this tutorial, we focus on the fourth example, using MicroBOSH to deploy multi-VM BOSH.
-This is a realistic use case.
-It is appropriate if, for example, your goal is to use multi-VM BOSH as your primary toolset
-for deploying other distributed software and for managing the lifecycle of that software.
+This use case would be appropriate if, for example, your goal is to use multi-VM BOSH as
+your primary toolset for deploying other distributed software and for managing the lifecycle of that software.
 
 When you work through this tutorial, you experience what the BOSH development
 team thinks of as a canonical example of using BOSH.
