--- a/deploy-with-bosh.html.md.erb
+++ b/deploy-with-bosh.html.md.erb
@@ -168,7 +168,7 @@ Duration	00:01:40
 Deployed `manifest.yml' to `embarcadero-microbosh'
 </pre>
 
-### <a id="verify"></a> Verify ###
+## <a id="verify"></a> Verifying the Deployment ##
 
 While the output you have seen indicates that deployment was successful,
 you can run some basic checks on your new multi-VM BOSH.
