tweak section title

--- a/deploy-with-bosh.html.md.erb
+++ b/deploy-with-bosh.html.md.erb
@@ -206,7 +206,7 @@ Deployment
 </pre>
 
 
-## <a id="example-manifest"></a> Manifest for Deploying BOSH with MicroBOSH ##
+## <a id="example-manifest"></a> Example Manifest ##
 
 ~~~yaml
 ---
