tweak first para

--- a/deploy-with-bosh.html.md.erb
+++ b/deploy-with-bosh.html.md.erb
@@ -9,10 +9,9 @@ For example, you could:
 * Use multi-VM BOSH to deploy a BOSH release of a key-value store.
 * Use multi-VM BOSH to deploy Cloud Foundry.
 * Use MicroBOSH to deploy a distributed messaging service.
-* Use MicroBOSH to deploy multi-VM BOSH.
 
-In this tutorial, we focus on the fourth example, using MicroBOSH to deploy multi-VM BOSH.
-This use case would be appropriate if, for example, your goal is to use multi-VM BOSH as
+In this tutorial, we focus on yet another example: using MicroBOSH to deploy multi-VM BOSH.
+This use case is appropriate if, for example, you want to use multi-VM BOSH as
 your primary toolset for deploying other distributed software and for managing the lifecycle of that software.
 
 When you work through this tutorial, you experience what the BOSH development
