add link to OpenStack API

--- a/iaas-setup.html.md.erb
+++ b/iaas-setup.html.md.erb
@@ -201,9 +201,4 @@ You can use the appropriate APIs for performing and automating validation:
 
 * [VMware vSphere API](https://www.vmware.com/support/developer/vc-sdk/)
 * [Amazon EC3 API](http://docs.aws.amazon.com/AWSEC2/latest/APIReference/Welcome.html)
-
-
-
-
-
-
+* [OpenStack APIs](http://api.openstack.org/)
