add links to recent topics to index

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -5,7 +5,10 @@ title: BOSH
 * [Glossary](glossary.html)
 * [What BOSH is and Why it's Different](what-bosh-is.html)
 * [Basic BOSH Workflow](workflow.html)
+* [Setting Up your Iaas for BOSH](iaas-setup.html)
 * [Deploying MicroBOSH](deploy-microbosh.html)
+* [Deploying Distributed Software with BOSH](deploy-with-bosh.html)
+* [Creating a MicroBOSH Deployment Manifest](create-micro-manifest.html)
 * [Creating a BOSH Deployment Manifest](create-manifest.html)
 * [How BOSH Works](how-bosh-works.html)
 * [Local Setup](setup/index.html)
