--- a/create-micro-manifest.html.md.erb
+++ b/create-micro-manifest.html.md.erb
@@ -3,7 +3,7 @@ title: Creating a MicroBOSH Deployment Manifest
 ---
 
 The deployment manifest for MicroBOSH is similar the deployment manifest for multi-VM BOSH,
-but much simpler.
+but much shorter.
 
 Parts of the manifest are IaaS-specific.
 Refer to the example for the IaaS you plan to use:
@@ -94,7 +94,7 @@ resources:
 
 ### <a id='cloud'></a> The cloud block ###
 
-The resources block specifies a `plugin` which specifies the IaaS you want to use,
+The resources block specifies a `plugin` whose value is the name of the IaaS you want to use,
 and `properties`, whose content differs from IaaS to IaaS.
 
 For example:
