clean up logging block prose

--- a/create-micro-manifest.html.md.erb
+++ b/create-micro-manifest.html.md.erb
@@ -36,8 +36,9 @@ For this reason, you can put the blocks in any order.
 
 ### <a id='logging'></a> The logging block ###
 
-Logging level defaults to `info`, and can be set to `warn`, `error`, and the recommended level, `debug`.
-Logs are written to a file which you can specify.
+Logging should normally be set to `debug`.
+Other valid levels are `info` (the default), `warn`, and `error`.
+You can also specify the file to which MicroBOSH writes logs.
 
 <pre class="terminal">
 logging:
